:art: style: fix copyright both ends are too small on phone

--- a/source/css/_partial/copyright.styl
+++ b/source/css/_partial/copyright.styl
@@ -1,5 +1,6 @@
 footer {
     padding-bottom: 1px;
+    margin: 2em 30px;
     .copyright {
         margin: 4em 0;
         border-top: 1px solid #ddd;
